Updated Unit Tests (added Javadoc, style) and WineDAO methods
I refactored Wine, implemented Update Wine, getWineFromName, added a hash map to the batch add to improve efficiency, as well as general style checks and java doc.