@@ -1,6 +1,5 @@
 package seng202.team5.unittests.respository;
 
-import kotlin.NotImplementedError;
 import org.apache.commons.lang3.NotImplementedException;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Assertions;
@@ -11,10 +10,17 @@ import seng202.team5.models.Vineyard;
 import seng202.team5.repository.DatabaseService;
 import seng202.team5.repository.VineyardDAO;
 
+/**
+ * Unit tests for the VineyardDAO
+ */
 public class VineyardDAOTest {
     static VineyardDAO vineyardDAO;
     static DatabaseService databaseService;
 
+
+    /**
+     * Set up the testing scenario
+     */
     @BeforeAll
     static void setup() throws InstanceAlreadyExistsException {
         DatabaseService.removeInstance();
@@ -22,24 +28,41 @@ public class VineyardDAOTest {
         vineyardDAO = new VineyardDAO();
     }
 
+
+    /**
+     * Reset the database before each test.
+     */
     @BeforeEach
     void resetDB() {
         databaseService.resetDb();
     }
 
+
+    /**
+     * Test that the database is empty on creation.
+     */
     @Test
-    public void testVineyardsEmptyOnCreation() {
+    public void testEmptyOnCreation() {
         Assertions.assertEquals(0, vineyardDAO.getAll().size());
     }
 
+
+    /**
+     * Test adding a Vineyard.
+     */
     @Test
     public void testAddVineyardOK() {
         Vineyard toAdd = new Vineyard("test1", "region1");
         vineyardDAO.add(toAdd);
         Assertions.assertEquals(1, vineyardDAO.getAll().size());
-        Vineyard vineyard = vineyardDAO.getAll().get(0);
+        Vineyard vineyard = vineyardDAO.getAll().getFirst();
         Assertions.assertEquals(toAdd.getName(), vineyard.getName());
     }
+
+
+    /**
+     * Test deleting a vineyard.
+     */
     @Test
     public void testDeleteVineyard() {
         int insertId = vineyardDAO.add(new Vineyard("test", "region1"));
@@ -48,6 +71,10 @@ public class VineyardDAOTest {
         Assertions.assertEquals(totalVineyardsBefore - 1, vineyardDAO.getAll().size());
     }
 
+
+    /**
+     * Test getting a vineyard from its id.
+     */
     @Test
     public void testGetVineyardByID() {
         Vineyard toAdd = new Vineyard("test", "region1");
@@ -56,6 +83,10 @@ public class VineyardDAOTest {
         Assertions.assertEquals(toAdd.getName(), vineyard.getName());
     }
 
+
+    /**
+     * Test updating a vineyard.
+     */
     @Test
     public void testUpdateVineyard() {
         Vineyard vineyard = new Vineyard("test", "region1");
